# dianzi-junshi

./: .gitattributes  .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  README_EN.md  SKILL.md  install.ps1  install.sh  requirements.txt
agents/: openai.yaml
app/: README.md  adaptive.ts  decision.test.ts  embedding.ts  evaluate.ts  junshi.ts  keychain.ts  materials.ts  package.json  providers.test.ts  providers.ts  semantic.ts  server.ts  store.test.ts  store.ts  tsconfig.json  voicelint.ts
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: adaptive-decision-engine.md  database-migrations.md  decision-engine-evaluation.md  local-decision-pipeline.md  privacy-calibration-and-keychain.md  release-signing.md  发布桌面安装包.md  批量素材与长期记忆.md  新手指南.md  时间画像与结果学习.md  长期记忆库.md
prompts/: advisor_mode.md  analysis_version.md  auto_feedback.md  correction_handler.md  date_planner.md  folder_importer.md  human_voice.md  intake.md  interest_detector.md  memory_engine.md  message_analyzer.md  moments_analyzer.md  oil_control.md  partner_analyzer.md  partner_builder.md  reply_generator.md  stage_system.md  style_calibrator.md
references/: calendar_dates.md  dating.md  evidence_frameworks.md  experience_design.md  glossary.md  lines_library.md  memes.md  memory.md  partner.md  persona_modes.md  personality_baseline.md  pursuit_playbooks.md  (+6 more)
(+36 files in other folders)
