[package]
name = "dianzi-junshi-desktop"
version = "4.0.0"
description = "电子军师桌面应用"
authors = ["shoal-rat contributors"]
edition = "2021"

[lib]
name = "dianzi_junshi_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-single-instance = "2.4.2"
